# modbus-rs

./: .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  SPEC.md
docs/: comparison-with-modbus-go.md  implementation-plan.md  issue#0032.html  issue#0033.html  issue#0037.html  issue#0038.html  loopback-tests.md  roadmap.md
docs/adr/: 0001-unified-client-core.md  0002-idle-timeout.md  0003-request-hooks.md
docs/specs/: issue-39-async-ascii.md  issue-40-async-udp.md
examples/: ascii_client.rs  async_tcp_client.rs  config_client.rs  config_server.rs  custom_data_store.rs  logging_hook.rs  rtu_client.rs  rtu_over_tcp_client.rs  rtu_over_tcp_server.rs  tcp_client.rs  tcp_server.rs  tls_client.rs  tls_server.rs  typed_helpers.rs  udp_client.rs  udp_server.rs
src/: ascii.rs  ascii_client.rs  ascii_server.rs  ascii_transport.rs  async_rtu_server.rs  config.rs  error.rs  exception.rs  function.rs  helpers.rs  lib.rs  macros.rs  metrics.rs  rtu.rs  rtu_over_tcp_server.rs  rtu_server.rs  rtu_transport.rs  serial_transport.rs  tcp.rs  tcp_client.rs  tcp_server.rs  tcp_transport.rs  test_trace.rs  transport.rs  udp.rs  udp_client.rs  udp_server.rs  udp_transport.rs
src/client/: async.rs  macros.rs  mod.rs  retry_adapter.rs  rtu_adapter.rs  sync.rs
src/function_codes/: diagnostics.rs  encapsulated_interface_transport.rs  get_comm_event_counter.rs  get_comm_event_log.rs  mask_write_register.rs  mod.rs  read_coils.rs  read_discrete_inputs.rs  read_exception_status.rs  read_fifo_queue.rs  read_file_record.rs  read_holding_registers.rs  read_input_registers.rs  read_write_multiple_registers.rs  report_server_id.rs  write_file_record.rs  write_multiple_coils.rs  write_multiple_registers.rs  write_single_coil.rs  write_single_register.rs
src/server/: async.rs  data_store.rs  hook.rs  mod.rs  sync.rs
tasks/: create_issues.py  prd-modbus.md  spec-modbus.md
tests/: advanced_integration.rs  async_rtu_server.rs  bit_access_integration.rs  file_record_mei_integration.rs  loopback.rs  mock_integration.rs  register_access_integration.rs  serial_loopback.rs  tls_integration.rs  tlv_integration.rs
tests/common/: mod.rs
