[package]
name = "modbus"
version = "0.1.2"
edition = "2021"

[features]
default = ["std"]
std = []
rtu = []
ascii = []
tcp = []
udp = []
sync = ["std", "rtu"]
async = ["std", "dep:tokio"]
serial = ["rtu", "async", "dep:tokio-serial"]
helpers = []
cli = ["std", "async", "tcp", "rtu", "serial", "tracing", "dep:clap", "dep:tracing-subscriber"]
loopback-tests = ["rtu", "ascii", "serial"]
tls = ["std", "tcp", "async", "dep:tokio-rustls", "dep:rustls"]
sync-serial = ["std", "sync", "dep:serialport"]
config = ["std", "dep:serde", "dep:serde_json", "dep:toml", "dep:serde_yaml"]
tracing = ["std", "dep:tracing"]
metrics = ["std"]

[dependencies]
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "io-util", "time", "macros"], optional = true }
tokio-rustls = { version = "0.26", optional = true, features = ["ring"] }
rustls = { version = "0.23", optional = true, features = ["ring"] }
tokio-serial = { version = "5", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
serde_yaml = { version = "0.9", optional = true }
serialport = { version = "4", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[[bin]]
name = "modbus-cli"
path = "src/bin/modbus_cli.rs"
required-features = ["cli"]

[[example]]
name = "logging_hook"
required-features = ["sync", "tcp"]

[[test]]
name = "tls_integration"
path = "tests/tls_integration.rs"
required-features = ["sync", "tcp", "tls"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
rcgen = "0.13"
tracing-subscriber = "0.3"
